--- a/catalog/view/theme/zohannah/css/fix.css
+++ b/catalog/view/theme/zohannah/css/fix.css
@@ -27,7 +27,7 @@ HIDE FILTERS
 .prod-filter-bar .filter-inner{text-align:center}
 
 /*
-PROD LISTING
+PROD LISTING CATEGORY PAGE
 */
 .display-prod{background:#fff}
 .textindent{text-indent:-9000px}
@@ -65,6 +65,7 @@ UI/UX
 /*
 PRODUCT PAGE
 */
+.product-hero-wrapper{cursor:none}
 .minithumb, .minithumbimg{width:40px;height:62px}
 .minithumb{margin-bottom:5px}
 .swiper-container{width:100%;height:100%}
@@ -76,6 +77,7 @@ PRODUCT PAGE
 @media only screen and (max-width:750px) {
 	.zohMobilePadding{padding-left:15px;padding-right:15px;position:relative}
 }
+
 /*
 LOGO
 */
