--- a/catalog/view/theme/zohannah/css/fix.css
+++ b/catalog/view/theme/zohannah/css/fix.css
@@ -98,12 +98,13 @@ LOGO
 /*
 PROMO BAR
 */
-.promobar{display:none !important}
+.promoBar{background:#d54d4d;color:#fff;font-size:9px;letter-spacing:0.5px;line-height:17px;position:relative;text-align:center;text-transform:uppercase;width:100%}
 #mobile-nav-button{top:15px !important}
 
 /*
 VALIDATION
 */
+.errorformapps{color:#d80a0d}
 .errorformapps{border:3px solid #d80a0d !important}
 
 /*
