--- a/catalog/view/theme/zohannah/css/fix.css
+++ b/catalog/view/theme/zohannah/css/fix.css
@@ -173,3 +173,11 @@ ACCOUNT LOGIN REGISTER
 */
 .zohannahAccount .logobrand,
 .zohannahAccount .nix-nav-submenu-link{color:#000}
+
+/*
+FAQS
+*/
+#orders-1{color:#333;text-transform:uppercase;border-bottom:1px dotted #333}
+#orders-1 a{color:#333;display:block;text-decoration:none}
+.faq-cat{text-transform:uppercase;color:#fff;background:#000;padding:3px 5px;font-weight:none}
+.accord h3{font-size:15px}
